feat: rectifying page navigation